# milling_robot

milling_robot_description/: CMakeLists.txt  package.xml
milling_robot_description/launch/: display.launch.py
milling_robot_description/meshes/: Gripper1.stl  Gripper2.stl  base_link.stl  link1.stl  link2.stl  link3.stl  link4.stl
milling_robot_description/rviz/: urdf.rviz
milling_robot_description/urdf/: milling_robot.urdf
milling_robot_interfaces/: CMakeLists.txt  package.xml
milling_robot_interfaces/action/: JointTraj.action  JointTrajectory.action  Waypoint.action
milling_robot_interfaces/msg/: Waypoint.msg
milling_robot_kinematics/: package.xml  setup.cfg  setup.py
milling_robot_kinematics/launch/: milling_robot.launch.py
milling_robot_kinematics/milling_robot_kinematics/: control_node.py  control_panel.ui  dash_trial.py  execute_trajectory_node.py  kinematic_model.py  milling_robot_kinematic_model.py  milling_robot_model.py  trajectory_generation_node.py  ui_file.py
milling_robot_kinematics/scripts/: part_3_ik.py  part_4_trajectory.py
